# hw6-cicd

./: Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: settings.py
db/: models.py
docker/server/: Dockerfile
docker/tests/: Dockerfile
server/: contracts.py  main.py
tests/: app.py  test_main.py
