[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hw-6"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["ilya <lystsov.ilya@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.103.2"
uvicorn = "0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
pylint = "^3.0.1"
mypy = "^1.6.1"
httpx = "^0.25.0"
pytest = "^7.4.2"
pytest-randomly = "^3.15.0"
pytest-cov = "^4.1.0"
bandit = "^1.7.5"
ruff = "^0.1.1"

[build]
script = "poetry build"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.flake8]
ban-todos = true

[tool.pytest.ini_options]
addopts = "--strict-markers -W error"
junit_family = "xunit2"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

[tool.mypy]
strict = true